Version 2.02.169 - 
=====================================
  Improve reported lvs status for active external origin volume.
  Fix table load for splitted RAID LV and require explicit activation.
  Always active splitted RAID LV exclusively locally.
  Do not use LV RAID status bit for segment status.
  Check segtype directly instead of checking RAID in segment status.
  Reusing exiting code for raid image removal.
  Fix pvmove leaving -pvmove0 error device in clustered VG.
  Avoid adding extra '_' at end of raid extracted images or metadata.
  Optimize another _rmeta clearing code.
  Fix deactivation of raid orphan devices for clustered VG.
  Fix lvconvert raid1 to mirror table reload order.
  Add internal function for separate mirror log preparation.
  Fix segfault in lvmetad from missing NULL in daemon_reply_simple.
  Simplify internal _info_run() and use _setup_task_run() for mknod.
  Better API for internal function _setup_task_run.
  Avoid using lv_has_target_type() call within lv_info_with_seg_status.
  Simplify internal lv_info_with_seg_status API.
  Decide which status is needed in one place for lv_info_with_seg_status.
  Fix matching of LV segment when checking for it info status.
  Report log_warn when status cannot be parsed.
  Test segment type before accessing segment members when checking status.
  Implement compatible target function for stripe segment.
  Use status info to report merge failed and snapshot invalid lvs fields.

Version 2.02.168 - 30th November 2016
=====================================
  Display correct sync_percent on large RaidLVs
  lvmdbusd --blackboxsize <n> added, used to override default size of 16
  Allow a transiently failed RaidLV to be refreshed
  Use lv_update_and_reload() inside mirror code where it applies.
  Preserve mirrored status for temporary layered mirrors.
  Use transient raid check before repairing raid volume.
  Implement transient status check for raid volumes.